# TPPJ-Modeling-Code

./: README.md  pyproject.toml
Hypothesis_1/Datasets/2021/: Dataset_2021.csv
Hypothesis_1/Datasets/2022/: Dataset_2022.csv
Hypothesis_1/LORO/2021/Baseline_Model/: Baseline_LASSO.ipynb  Baseline_XGBoost.ipynb
Hypothesis_1/LORO/2021/Outputs/: predictions.csv
Hypothesis_1/LORO/2021/Testing/: LORO.ipynb
Hypothesis_1/LORO/2022/Baseline_Model/: Baseline_LASSO.ipynb  Baseline_XGBoost.ipynb
Hypothesis_1/LORO/2022/Outputs/: predictions.csv
Hypothesis_1/LORO/2022/Testing/: LORO.ipynb
Hypothesis_1/LOYO/Baseline_Model/: Baseline_XGBoost.ipynb  Basline_LASSO.ipynb
Hypothesis_1/LOYO/Baseline_Model/Saved_Models/: Baseline_LASSO  Baseline_XGBoost
Hypothesis_1/LOYO/Outputs/: pca_embedding_2021.csv  predictions.csv  umap_embedding_2021.csv  umap_embedding_2022.csv
Hypothesis_1/LOYO/Proposed_Models/Proposed_Modeling_Approach_1/: H1A1M1.ipynb  H1A1M2.ipynb
Hypothesis_1/LOYO/Proposed_Models/Proposed_Modeling_Approach_2/: H1A2M2.ipynb
Hypothesis_1/LOYO/Testing/: LOYO.ipynb
Hypothesis_2/LORO/2021/Outputs/: predictions.csv  pumap_embedding_test.csv  pumap_embedding_train.csv
Hypothesis_2/LORO/2021/Testing/: LORO.ipynb
Hypothesis_2/LORO/2022/Outputs/: predictions.csv  pumap_embedding_test.csv  pumap_embedding_train.csv
Hypothesis_2/LORO/2022/Testing/: LORO.ipynb
Hypothesis_2/LOYO/Outputs/: predictions.csv  pumap_embedding_2021.csv  pumap_embedding_2022.csv
Hypothesis_2/LOYO/Testing/: LOYO.ipynb
(+68 files in other folders)
