[tool.poetry]
name = "umap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipykernel = "^6.23.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
umap-learn = "^0.5.3"
xgboost = "^1.7.5"
bayesian-optimization = "^1.4.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
datashader = "^0.15.0"
bokeh = "^3.1.1"
holoviews = "^1.16.1"
scikit-image = "^0.21.0"
colorcet = "^3.0.1"
opencv-python = "^4.7.0.72"
keras-tuner = "^1.3.5"
statsmodels = "^0.14.0"
tensorflow-io-gcs-filesystem = "0.27.0"
ray = "^2.6.1"
shap = "^0.42.1"
plotly = "^5.16.1"
nbformat = "^5.9.2"
imgaug = "^0.4.0"
tensorflow = "~2.10"
pca = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
